Changed Seconds to Arriving on PIDS

--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,7 @@ task setupFiles() {
 		into "common/src/main/resources/assets/mtr/website/gestures"
 	}
 
+	/* temporarily disable auto translate
 	download {
 		src "https://crowdin.com/backend/download/project/minecraft-transit-railway.zip"
 		dest "common/src/main/java/mtr/mappings/lang.zip"
@@ -99,7 +100,7 @@ task setupFiles() {
 		outputs.upToDateWhen { false }
 		from(zipTree("common/src/main/java/mtr/mappings/lang.zip")) { eachFile { file -> file.relativePath = new RelativePath(true, file.relativePath.segments.drop(1) as String[]) } }
 		into "common/src/main/resources/assets/mtr/lang"
-	}
+	}*/
 
 	copy {
 		outputs.upToDateWhen { false }
